# PhaseSpaceSim

./: .gitignore  CMakeLists.txt  Doxyfile  PSS_EXPORT.h  README.md  mainpage.doc  test.cpp
PSS/: CMakeLists.txt  Camera.cpp  Camera.h  test.cpp
PSS/Core/: Core.cpp  Core.h
PSS/camera/: Camera.cpp  Camera.h  LinearDetector.cpp  LinearDetector.h
PSS/core/: Core.cpp  Core.h  SimulationContext.cpp  SimulationContext.h
PSS/geometry/: Homogeneous.h  Pose3.cpp  Pose3.h  Rot3.cpp  Rot3.h
estimation/: CMakeLists.txt  SimplePoseGraph.cpp
estimation/PSS/factors/: LinearDetectorFactor.cpp  LinearDetectorFactor.h
matlab/: PSS_pipeline.m  PhaseSpaceSim.asv  PhaseSpaceSim.m  analyse_results.asv  analyse_results.m  analyse_results2.m  analyse_rotation.m  analytical_cube.m  batch_output_postprocessor.m  centdiff.m  create_occlusion.m  error_over_time.m  extend_recording.m  num_cams.m  quat2angvel.m  smoothing_spline.m  visualize_pss_output.m
python/: pipeline.py
testing/: CMakeLists.txt  CameraTest.cpp  CoreTest.cpp  LinearDetectorTest.cpp
testing/camera/: CameraTest.cpp  LinearDetectorTest.cpp
testing/core/: CoreTest.cpp  SimulationContextTest.cpp  SimulationContextTest.h
unity/Assets/Animations/: ComplexRotation.anim  Cube 1.controller  Cube 2.controller  Cube 3.controller  Cube 4.controller  Cube 5.controller  Cube 6.controller  Cube 7.controller  Cube.controller  CubeRotationTranslation.anim  Cube_rotate.anim
unity/Assets/Animations/Paper/: ComplexRotation1.anim  ComplexRotation2.anim  ComplexRotation3.anim  cube.anim
unity/Assets/Animations/testing/: x.anim
unity/Assets/Materials/: LED Direction.mat  LED Marker.mat
unity/Assets/Prefabs/: Marker_1.prefab
unity/Assets/Scenes/: Main.unity  MeasurementHUD.unity
unity/Assets/Scenes/Main/: LightingData.asset
unity/Assets/Scripts/: BodyManager.cs  CameraManager.cs  CubeSettings.cs  DataRecorder.cs  FrameRateButtonManager.cs  RecordButtonManager.cs  SimulationSettings.cs
unity/ProjectSettings/: ProjectSettings.asset
